--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwind-gradient-mask-image": "^1.2.0"
   },
   "devDependencies": {
