--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
