--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-gradient-mask-image": "^1.2.0"
   },
